ubiquity (1.1.0) UNRELEASED; urgency=low

  * Use try/finally in install.py to ensure that PROGRESS STOP is always
    called; ignore errors from PROGRESS STOP (e.g. because debconf has gone
    away due to a previous error).
  * Support /KNOPPIX as well as /rofs as the read-only filesystem source.
  * Don't require entering a full name (see
    http://www.hermann-uwe.de/blog/os-install-experiences-part-4-ubuntu).
  * GTK frontend:
    - Return None from location_from_point if point is None (thanks to Chris
      Moore for the idea; closes: Malone #48885).
  * KDE frontend:
    - Add slightly more paranoia in case getNearestCity returns None.
  * Don't show hw-detect/modprobe_error, and make it non-fatal (closes:
    Malone #48524).
  * Make it clear in the crash dialog that you should file a new bug, not
    attach your details to an existing bug.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon,  5 Jun 2006 03:11:16 +0100

ubiquity (1.0.12) dapper; urgency=low

  * Teach get_string to fetch translations for ll_CC locales (e.g.
    zh_{CN,TW}).
  * Automatic update of included source packages: localechooser
    0.27ubuntu22.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 31 May 2006 00:03:47 +0100

ubiquity (1.0.11) dapper; urgency=low

  * Remove superfluous parenthesis from copy_debconf.
  * Add/update .desktop file translations from Rosetta: Afrikaans, Amharic,
    Azerbaijani, Bulgarian, Bengali, Catalan, Czech, Danish, Greek, Basque,
    Persian, Galician, Hebrew, Armenian, Indonesian, Icelandic, Georgian,
    Latvian, Norwegian Bokmål, Norwegian Nynorsk, Norwegian, Romanian,
    Swedish, Tamil, Thai, Tagalog, Turkish, Chinese (Hong Kong).
  * Add/update translations from Rosetta: Afrikaans, Azerbaijani,
    Belarusian, Bengali, Breton, Catalan, Czech, German, Basque, Persian,
    Frisian, Galician, Hebrew, Indonesian, Icelandic, Italian, Japanese,
    Georgian, Lithuanian, Norwegian Bokmål, Dutch, Occitan, Portuguese