@@ -3,7 +3,8 @@ ubiquity (1.1.0) UNRELEASED; urgency=low
   * Use try/finally in install.py to ensure that PROGRESS STOP is always
     called; ignore errors from PROGRESS STOP (e.g. because debconf has gone
     away due to a previous error).
-  * Support /KNOPPIX as well as /rofs as the read-only filesystem source.
+  * Support /UNIONFS (Knoppix) as well as /rofs as the read-only filesystem
+    source.
   * Don't require entering a full name (see
     http://www.hermann-uwe.de/blog/os-install-experiences-part-4-ubuntu).
   * GTK frontend:
